Extent Report with Allure report listner commiting

--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -2,6 +2,6 @@ browsername=chrome
 url=https://naveenautomationlabs.com/opencart/index.php?route=account/login
 Username=shivender339@gmail.com
 Password=Shivender#12
-headless= true
+headless= false
 incognito= true
 highlight= true
